Update Notes.md